# soupbot

./: CMakeLists.txt  README.md  ingredients.json
src/: soupbot.cpp
